--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,6 @@
 # The name uses to detect in witch hub you are
-hub_id: Hub-1
+hub_id: 1
+hud_name: Hub-%id%
 
 # DON'T CHANGE
 spawn_location: world;0.0;0.0;0.0;0.0;0.0
