--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,9 @@
 hub_id: 1
 hud_name: Hub-%id%
 
+# %player% -> Player display name || %message% -> Player send message
+chat_format: "&f%player%&7: &f%message%"
+
 # DON'T CHANGE
 spawn_location: world;0.0;0.0;0.0;0.0;0.0
 # DON'T CHANGE
